updates and events page  updated!

--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
         <div class="cards" style="margin-top:18px">
           <article class="card">
             <div class="chip">🎯 Our Aim</div>
-            <h3>To empower individuals with the right knowledge, confidence, and resources 💡, nurturing creativity and innovation so that every idea 🌱 has the chance to grow into something meaningful.</h3>
+            <h3>We aim to be the guiding light that illuminates their path to success, inspiring them to embark on their entrepreneurial ventures with confidence and determination. Our vision is to see our students not just excel academically but to become trailblazers in their respective fields, leading innovative initiatives and ventures that make a positive and lasting impact on society.</h3>
             <!-- <p>Project-first initiatives that help you prototype, validate, and iterate.</p> -->
           </article>
           <article class="card">
             <div class="chip">👀 Our Vision</div>
-            <h3>To build a future shaped by technology 🤖, collaboration 🤝, and creativity 🎨, where young minds transform possibilities into sustainable solutions 🌍 that drive positive change.</h3>
+            <h3>E-Cell envisions the creation of a vibrant community of zealous individuals, all sharing a common passion for entrepreneurship. We aspire to be the catalyst that ignites the entrepreneurial spirit within the students of various branches in our university, right from the early stages of their college journey. Our vision is to introduce them to the rapidly evolving world of entrepreneurship and provide them with opportunities to explore diverse entrepreneurial fields.</h3>
             <!-- <p>Meet founders, engineers, designers, and mentors who’ve been there.</p> -->
           </article>
           <article class="card">
             <div class="chip">🚀 Our Goal</div>
-            <h3>To bridge the gap between ideas 💭 and action 🔧 by providing mentorship 🧑‍🏫, opportunities 🌟, and a supportive community 🌐 that inspires students to become leaders and changemakers.</h3>
+            <h3>The goal of the Entrepreneurship Cell (E-Cell) at Indira Gandhi Delhi Technical University for Women (IGDTUW) is to foster an entrepreneurial mindset by equipping students with essential skills in innovation, leadership, and problem-solving. To provide a supportive platform that broadens perspectives, encourages creative thinking, and empowers students to transform ideas into impactful ventures that shape the future.</h3>
             <!-- <p>Showcase your work in college-wide demos, fests, and partner events.</p> -->
           </article>
         </div>
@@ -267,7 +267,7 @@
 
       <!-- Stat 1 -->
       <div>
-        <h2 class="text-4xl font-extrabold text-white counter" data-target="1300">0</h2>
+        <h2 class="text-4xl font-extrabold text-white counter" data-target="2000">0</h2>
         <p class="text-gray-300 mt-2 text-lg">Instagram Following</p>
       </div>
 
@@ -417,62 +417,80 @@
       </div>
     </section>
     <!-- Footer Section -->
-    <footer class="bg-purple-600 text-gray-200 py-12 relative">
-      <div class="max-w-7xl mx-auto px-6 md:px-12 grid grid-cols-1 md:grid-cols-4 gap-8">
+<footer class="bg-purple-400 text-gray-700 py-12 relative">
+  <div class="max-w-7xl mx-auto px-6 md:px-12 grid grid-cols-1 md:grid-cols-4 gap-8">
 
-        <!-- Contact -->
+    <!-- Location with Map -->
+    <div>
+      <h3 class="text-lg font-semibold mb-4">Location</h3>
+      <div class="flex flex-col space-y-4">
+        <!-- Map Embed -->
+        <div class="w-full h-40 rounded-lg overflow-hidden shadow-lg">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3503.3386164064586!2d77.229433!3d28.6655361!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd0683919c3b%3A0xf5fc331b74c2b9e2!2sIndira%20Gandhi%20Delhi%20Technical%20University%20for%20Women!5e0!3m2!1sen!2sin!4v1694000000000!5m2!1sen!2sin" 
+            width="100%" 
+            height="100%" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+
+        <!-- Address + Contact -->
         <div>
-          <h3 class="text-lg font-semibold mb-4">Location</h3>
           <p>Indira Gandhi Delhi Technical University For Women, Kashmere Gate, New Delhi, India</p>
-          </br>
+          <br>
           <p>+91 98765 43210</p>
-          </br>
+          <br>
           <p><span class="gmail com">ecelligdtuw@gmail.com</span></p>
         </div>
-
-        <!-- Company -->
-        <div>
-          <h3 class="text-lg font-semibold mb-4">ECell IGDTUW</h3>
-          <ul class="space-y-2">
-            <li><a href="#" class="hover:text-pink-400 transition">About Us</a></li>
-            <li><a href="#" class="hover:text-pink-400 transition">Careers</a></li>
-            <li><a href="#" class="hover:text-pink-400 transition">Blog</a></li>
-            <li><a href="#" class="hover:text-pink-400 transition">Contact</a></li>
-          </ul>
-        </div>
-
-        <!-- Services -->
-        <div>
-          <h3 class="text-lg font-semibold mb-4">Services</h3>
-          <ul class="space-y-2">
-            <li><a href="#" class="hover:text-pink-400 transition">Hackathons</a></li>
-            <li><a href="#" class="hover:text-pink-400 transition">Insightful Sessions</a></li>
-            <li><a href="#" class="hover:text-pink-400 transition">Events</a></li>
-            <li><a href="#" class="hover:text-pink-400 transition">Funding Ideas</a></li>
-          </ul>
-        </div>
-
-        <!-- Social -->
-        <div>
-          <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
-          <div class="flex space-x-4 mb-4">
-            <a href="#" class="hover:text-pink-400"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="hover:text-pink-400"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="hover:text-pink-400"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="hover:text-pink-400"><i class="fab fa-x-twitter"></i></a>
-          </div>
-          <div class="mt-4">
-            <p>Reviewed on <strong>XYZ</strong> ⭐⭐⭐⭐⭐ 5.0 Rating</p>
-          </div>
-        </div>
-
       </div>
+    </div>
 
-      <!-- Footer Bottom -->
-      <div class="mt-12 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
-        © 2025 ECell IGDTUW. All rights reserved.
+    <!-- Company -->
+    <div>
+      <h3 class="text-lg font-semibold mb-4">ECell IGDTUW</h3>
+      <ul class="space-y-2">
+        <li><a href="#" class="hover:text-pink-400 transition">About Us</a></li>
+        <li><a href="#" class="hover:text-pink-400 transition">Careers</a></li>
+        <li><a href="#" class="hover:text-pink-400 transition">Blog</a></li>
+        <li><a href="#" class="hover:text-pink-400 transition">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Services -->
+    <div>
+      <h3 class="text-lg font-semibold mb-4">Services</h3>
+      <ul class="space-y-2">
+        <li><a href="#" class="hover:text-pink-400 transition">Hackathons</a></li>
+        <li><a href="#" class="hover:text-pink-400 transition">Insightful Sessions</a></li>
+        <li><a href="#" class="hover:text-pink-400 transition">Events</a></li>
+        <li><a href="#" class="hover:text-pink-400 transition">Funding Ideas</a></li>
+      </ul>
+    </div>
+
+    <!-- Social -->
+    <div>
+      <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
+      <div class="flex space-x-4 mb-4">
+        <a href="#" class="hover:text-pink-400"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" class="hover:text-pink-400"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="hover:text-pink-400"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="hover:text-pink-400"><i class="fab fa-x-twitter"></i></a>
       </div>
-    </footer>
+      <div class="mt-4">
+        <p>Reviewed on <strong>XYZ</strong> ⭐⭐⭐⭐⭐ 5.0 Rating</p>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Footer Bottom -->
+  <div class="mt-12 border-t border-gray-700 pt-6 text-center text-sm text-gray-500">
+    © 2025 ECell IGDTUW. All rights reserved.
+  </div>
+</footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
