--- a/events.html
+++ b/events.html
@@ -358,7 +358,7 @@
 
       <!-- Event 1 -->
       <div class="event-card" onclick="openModal('modal-orientation')">
-        <img src="https://i.postimg.cc/J4QLCNQh/IMG-9226.avif" class="event-thumb" alt="Orientation">
+        <img src="https://i.postimg.cc/3wsqjpmr/Scanned-20250828-1901-04.jpg" class="event-thumb" alt="Orientation">
         <div class="event-info">
           <h2>Orientation’25</h2>
           <p>Kicking off the new tenure with 100+ enthusiastic attendees</p>
@@ -367,7 +367,7 @@
 
       <!-- Event 2 -->
       <div class="event-card" onclick="openModal('modal-case')">
-        <img src="https://i.postimg.cc/hjHShKJP/IMG-9205.avif" class="event-thumb" alt="Case Conqueror">
+        <img src="ideastorm.png" class="event-thumb" alt="Case Conqueror">
         <div class="event-info">
           <h2>The Case Conqueror</h2>
           <p>Nationwide Case Study Challenge powered by Unstop</p>
@@ -376,7 +376,7 @@
 
       <!-- Event 3 -->
       <div class="event-card" onclick="openModal('modal-drishti')">
-        <img src="https://i.postimg.cc/9F0h1dsC/IMG-9223.avif" class="event-thumb" alt="Drishti IAS Event">
+        <img src="drishti.png" class="event-thumb" alt="Drishti IAS Event">
         <div class="event-info">
           <h2>E-Cell x Drishti IAS</h2>
           <p>From Engineering Dreams to Cracking Civil Services</p>
