--- a/index.html
+++ b/index.html
@@ -440,10 +440,6 @@
         <!-- Address + Contact -->
         <div>
           <p>Indira Gandhi Delhi Technical University For Women, Kashmere Gate, New Delhi, India</p>
-          <br>
-          <p>+91 98765 43210</p>
-          <br>
-          <p><span class="gmail com">ecelligdtuw@gmail.com</span></p>
         </div>
       </div>
     </div>
@@ -480,7 +476,13 @@
         <a href="#" class="hover:text-pink-400"><i class="fab fa-x-twitter"></i></a>
       </div>
       <div class="mt-4">
-        <p>Reviewed on <strong>XYZ</strong> ⭐⭐⭐⭐⭐ 5.0 Rating</p>
+          <a href="https://www.instagram.com/ecell.igdtuw/" class="hover:text-pink-400 transition">Instagram</a>
+          <br>
+          <br>
+        <p>+91 98765 43210</p>
+          <br>
+          <p><span class="gmail com">ecelligdtuw@gmail.com</span></p>
+        
       </div>
     </div>
 
