--- a/events.html
+++ b/events.html
@@ -306,6 +306,8 @@
       transform: scale(1.06);
       box-shadow: 0 8px 20px rgba(168, 85, 247, 0.6);
     }
+
+    <!--added for making -->
   </style>
 </head>
 
