--- a/gallery.html
+++ b/gallery.html
@@ -5,331 +5,341 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gallery - E-Cell IGDTUW</title>
+
+  <!-- Main CSS -->
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
-    rel="stylesheet" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
-    rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Fredericka+the+Great&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Rye&display=swap"
-    rel="stylesheet" />
-</head>
+
+  <!-- Google Fonts -->
+ <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=swap" rel="stylesheet" />
+  
+  
 <style>
-  body{
-    font-family: 'Inter', sans-serif;
+/* ===========================
+   Navbar Styling for E-Cell
+=========================== */
+
+/* General body and font */
+body {
+  margin: 0;
+  padding: 0;
+  background-color: #0a0a0a;
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
+}
+
+/* Navbar Header */
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  backdrop-filter: saturate(140%) blur(8px);
+  background: linear-gradient(to bottom, rgba(10, 10, 10, 0.85), rgba(10, 10, 10, 0.55));
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+/* Navbar container */
+.nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* logo left, links right */
+  height: 72px; /* slightly bigger than before */
+  padding-left: 16px;  /* logo a bit further from left */
+  padding-right: 70px; /* links slightly further right */
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+/* Brand (logo + title) */
+.brand {
+  display: flex;
+  align-items: center;
+  gap: 16px; /* slightly bigger gap between logo and text */
+  text-decoration: none;
+  color: #f5f5f5;
+}
+
+.brand img {
+  height: 46px; /* slightly bigger logo */
+  width: 46px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.35);
+}
+
+.brand .title {
+  font-size: 19px; /* slightly bigger font */
+  font-weight: 800;
+  color: #fff;
+}
+
+.brand .subtitle {
+  font-size: 13px; /* slightly bigger subtitle */
+  color: #aaa;
+  margin-top: 2px;
+}
+
+/* Navbar links */
+.links {
+  display: flex;
+  align-items: center;
+  gap: 28px; /* slightly bigger spacing */
+}
+
+.links .nav-text {
+  cursor: pointer;
+  position: relative;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+  font-size: 15.5px; /* slightly bigger font */
+}
+
+.links .nav-text::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  height: 2px;
+  width: 0;
+  background: linear-gradient(90deg, #f3f4f6, #8a2be2);
+  transition: width 0.3s ease;
+}
+
+.links .nav-text:hover::after {
+  width: 100%;
+}
+
+/* CTA button */
+.cta {
+  padding: 9px 18px; /* slightly bigger button */
+  border-radius: 999px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  color: #fff;
+  background: transparent;
+  font-weight: 700;
+  font-size: 15px; /* slightly bigger font */
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.cta:hover {
+  background: rgba(255, 255, 255, 0.1);
+  transform: translateY(-1px);
+}
+
+/* Hamburger menu for mobile */
+.menu-btn {
+  display: none;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  flex-direction: column;
+  gap: 5px;
+  padding: 6px;
+}
+
+.menu-btn span {
+  display: block;
+  height: 2.5px; /* slightly thicker */
+  width: 24px;   /* slightly wider */
+  background-color: #fff;
+  border-radius: 2px;
+}
+
+/* Mobile drawer */
+.drawer {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 250px;
+  height: 100%;
+  background: #111;
+  box-shadow: -2px 0 10px rgba(0,0,0,0.4);
+  transition: right 0.3s ease;
+  z-index: 2000;
+  padding: 20px;
+}
+
+.drawer.open {
+  right: 0;
+}
+
+.drawer a {
+  display: block;
+  margin: 13px 0; /* slightly bigger spacing in drawer */
+  text-decoration: none;
+  color: #fff;
+  font-size: 17.5px;
+  font-weight: 600;
+}
+
+.drawer a:hover {
+  color: #a855f7;
+}
+
+.drawer .close {
+  align-self: flex-end;
+  background: transparent;
+  border: 1px solid rgba(255, 255, 255, .15);
+  color: #f5f5f5;
+  padding: 6px 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .links {
+    display: none;
   }
-  header {
-    font-family: 'Inter', sans-serif;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      backdrop-filter: saturate(140%) blur(8px);
-      background: linear-gradient(to bottom, rgba(10, 10, 10, .85), rgba(10, 10, 10, .55));
-      border-bottom: 0px solid rgba(255, 255, 255, .08);
-      flex-direction: row;
-    }
 
-    .nav {
-      margin: 0;
-      height: 72px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 0 18px;
-      z-index: 1000;
-      padding: 0 18px;
-      width: 100%;
-    }
+  .menu-btn {
+    display: flex;
+  }
+  .links {
+  display: flex;
+  align-items: center;
+  gap: 28px;       /* spacing between nav items */
+  margin-left: 20px; /* shift all headings slightly to the right */
+}
 
-    .brand {
-      display: flex;
-      align-items: center;
-      gap: 12px;
-      text-decoration: none;
-      color: #f5f5f5;
-    }
+/* rest remains the same as previous */
+.links .nav-text {
+  cursor: pointer;
+  position: relative;
+  text-decoration: none;
+  color: #fff;
+  font-weight: 700;
+  font-size: 15.5px;
+}
 
-    .brand img {
-      height: 42px;
-      width: 42px;
-      object-fit: cover;
-      border-radius: 12px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, .35);
-    }
+.links .nav-text::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  height: 2px;
+  width: 0;
+  background: linear-gradient(90deg, #f3f4f6, #8a2be2);
+  transition: width 0.3s ease;
+}
 
-    .brand .title {
-      font-weight: 800;
-      letter-spacing: .4px
-    }
+.links .nav-text:hover::after {
+  width: 100%;
+}
 
-    .brand .subtitle {
-      font-family: "Great Vibes", cursive;
-      font-size: 14px;
-      color: #999;
-      margin-top: -4px;
-    }
+/* CTA button */
+.cta {
+  padding: 9px 18px;
+  border-radius: 999px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  color: #fff;
+  background: transparent;
+  font-weight: 700;
+  font-size: 15px;
+  text-decoration: none;
+  cursor: pointer;
+}
 
-    .links {
-      display: flex;
-      gap: 28px;
-      align-items: center;
-      z-index: 1000;
-    }
-
-    .links .nav-text {
-      cursor: pointer;
-      position: relative;
-      text-decoration: none;
-      color: #f5f5f5;
-      font-weight: 600;
-    }
-
-    .links .nav-text::after {
-      content: "";
-      position: absolute;
-      left: 0;
-      bottom: -6px;
-      height: 2px;
-      width: 0;
-      background: linear-gradient(90deg, #f3f4f6, #8a2be2);
-      transition: width .25s ease
-    }
-
-    .links .nav-text:hover::after {
-      width: 100%
-    }
-
-    .cta {
-      padding: 10px 16px;
-      border-radius: 999px;
-      border: 1px solid rgba(255, 255, 255, .15);
-      background: linear-gradient(180deg, rgba(255, 255, 255, .08), rgba(255, 255, 255, .04));
-      cursor: pointer;
-      color: #f5f5f5;
-      font-weight: 700
-    }
-
-    .cta:hover {
-      transform: translateY(-1px)
-    }
-
-    /* Mobile */
-    .menu-btn {
-      display: none;
-      cursor: pointer;
-      border: none;
-      background: transparent;
-      padding: 8px
-    }
-
-    .menu-btn span {
-      display: block;
-      height: 2px;
-      width: 26px;
-      background-color: #f5f5f5;
-      margin: 6px 0;
-      border-radius: 2px
-    }
-
-    @media (max-width: 980px) {
-      .links {
-        display: none
-      }
-
-      .menu-btn {
-        display: block
-      }
-    }
-
-    /* ---------- Mobile Drawer ---------- */
-    .drawer {
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, .55);
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity .2s ease;
-      z-index: 999
-    }
-
-    .drawer.active {
-      opacity: 1;
-      pointer-events: auto
-    }
-
-    .drawer-panel {
-      position: absolute;
-      right: -320px;
-      top: 0;
-      height: 100%;
-      width: 320px;
-      background: #0f0f0f;
-      border-left: 1px solid rgba(255, 255, 255, .08);
-      padding: 24px;
-      display: flex;
-      flex-direction: column;
-      gap: 18px;
-      transition: right .25s ease
-    }
-
-    .drawer.active .drawer-panel {
-      right: 0
-    }
-
-    .drawer a {
-      color: #f5f5f5;
-      text-decoration: none;
-      font-weight: 700;
-      padding: 10px 8px;
-      border-radius: 10px
-    }
-
-    .drawer a:hover {
-      background: rgba(255, 255, 255, .06)
-    }
-
-    .drawer .close {
-      align-self: flex-end;
-      background: transparent;
-      border: 1px solid rgba(255, 255, 255, .15);
-      color: #f5f5f5;
-      padding: 6px 10px;
-      border-radius: 10px;
-      cursor: pointer
-    }
-
+.cta:hover {
+  background: rgba(255, 255, 255, 0.1);
+  transform: translateY(-1px);
+}
+}
 </style>
 
+
+
+
+</head>
 <body>
+
   <!-- Navbar -->
-  <div id="navbar-placeholder">
-    <!-- Header -->
-    <header role="banner">
-      <nav class="nav" aria-label="Primary">
-        <a class="brand" href="#home">
-          <img src="logo.jpeg" href="index.html" alt="E-Cell IGDTUW logo" />
-          <div>
-            <div class="title" href="index.html">E-Cell IGDTUW</div>
-            <div class="subtitle" href="index.html">Innovate • Create • Grow</div>
-          </div>
-        </a>
-
-        <div class="links" id="navLinks">
-          <a href="index.html" class="nav-text">About</a>
-          <a href="events.html" class="nav-text">Events</a>
-          <a href="our-team.html" class="nav-text">Team</a>
-          <a href="blogs.html" class="nav-text">Blogs</a>
-          <a href="gallery.html" class="nav-text">Gallery</a>
-          <a href="updates.html" class="nav-text">Updates</a>
-          <a class="cta" href="contact.html">Contact Us</a>
+  <div class="site-navbar">
+  <header role="banner">
+    <nav class="nav" aria-label="Primary">
+      <a class="brand" href="index.html">
+        <img src="logo.jpeg" alt="E-Cell IGDTUW logo" />
+        <div>
+          <div class="title">E-Cell IGDTUW</div>
+          <div class="subtitle">Innovate • Create • Grow</div>
         </div>
+      </a>
 
-        <button class="menu-btn" id="menuBtn" aria-label="Open menu" aria-controls="drawer" aria-expanded="false">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-      </nav>
-    </header>
-
-    <!-- Mobile Drawer -->
-    <div class="drawer" id="drawer" aria-hidden="true">
-      <div class="drawer-panel" role="dialog" aria-label="Mobile menu">
-        <button class="close" id="closeDrawer" aria-label="Close menu">Close</button>
-        <a href="#about" class="nav-text dlink">About</a>
-        <a href="events.html" class="nav-text dlink">Events</a>
-        <a href="our-team.html" class="nav-text dlink">Team</a>
-        <a href="blogs.html" class="nav-text dlink">Blogs</a>
-        <a href="gallery.html" class="nav-text dlink">Gallery</a>
-        <a href="updates.html" class="nav-text dlink">Updates</a>
-        <a href="contact.html" class="dlink">Contact Us</a>
+      <div class="links" id="navLinks">
+        <a href="index.html" class="nav-text">About</a>
+        <a href="events.html" class="nav-text">Events</a>
+        <a href="our-team.html" class="nav-text">Team</a>
+        <a href="blogs.html" class="nav-text">Blogs</a>
+        <a href="gallery.html" class="nav-text">Gallery</a>
+        <a href="updates.html" class="nav-text">Updates</a>
+        <a class="cta" href="contact.html">Contact Us</a>
       </div>
+
+      <button class="menu-btn" id="menuBtn" aria-label="Open menu" aria-controls="drawer" aria-expanded="false">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
+    </nav>
+  </header>
+
+  <!-- Mobile Drawer -->
+  <div class="drawer" id="drawer" aria-hidden="true">
+    <div class="drawer-panel" role="dialog" aria-label="Mobile menu">
+      <button class="close" id="closeDrawer" aria-label="Close menu">Close</button>
+      <a href="index.html" class="nav-text dlink">About</a>
+      <a href="events.html" class="nav-text dlink">Events</a>
+      <a href="our-team.html" class="nav-text dlink">Team</a>
+      <a href="blogs.html" class="nav-text dlink">Blogs</a>
+      <a href="gallery.html" class="nav-text dlink">Gallery</a>
+      <a href="updates.html" class="nav-text dlink">Updates</a>
+      <a href="contact.html" class="dlink">Contact Us</a>
     </div>
+  </div>
+  </div> <!-- end of .site-navbar -->
 
   <!-- Gallery Section -->
   <section class="gallery">
     <h2>Gallery</h2>
     <div class="gallery-flex">
       <div class="column left">
-        <div class="item">
-          <img src="https://i.postimg.cc/zG1qBCqs/1.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/W3Q91yq7/9.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/PJJ2Kjsh/11.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/prd0HLPx/17.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/sDhYZh6q/19.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/TPGnv3V2/IMG-9233.avif" alt="" />
-        </div>
+        <div class="item"><img src="https://i.postimg.cc/zG1qBCqs/1.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/J4qtf7VV/4.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/W3Q91yq7/9.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/PJJ2Kjsh/11.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/prd0HLPx/17.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/sDhYZh6q/19.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/TPGnv3V2/IMG-9233.avif" alt="" /></div>
       </div>
-      <div class="column middle">
-        <div class="item">
-          <img src="https://i.postimg.cc/m2CdbMWW/14.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/Qd00TCWC/10.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/3w4YRn8x/12.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/QdvvJ1h7/16.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/L63xqwxs/Scanned-20250828-1901-08.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/3wsqjpmr/Scanned-20250828-1901-04.jpg" alt="" />
-        </div>
 
+      <div class="column middle">
+        <div class="item"><img src="https://i.postimg.cc/m2CdbMWW/14.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/Qd00TCWC/10.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/3w4YRn8x/12.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/QdvvJ1h7/16.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/L63xqwxs/Scanned-20250828-1901-08.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/3wsqjpmr/Scanned-20250828-1901-04.jpg" alt="" /></div>
       </div>
+
       <div class="column right">
-        <div class="item">
-          <img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/Gpwd4vHP/15.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/ydpm0Xz4/18.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/QxT8ggRw/IMG-20250828-WA0052.jpg" alt="" />
-        </div>
-        <div class="item">
-          <img src="https://i.postimg.cc/9F0h1dsC/IMG-9223.avif" alt="" />
-        </div>
+        <div class="item"><img src="https://i.postimg.cc/4x20FcWK/5.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/8cPpmWyy/7.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/Gpwd4vHP/15.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/GpxFNxpd/3.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/ydpm0Xz4/18.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/QxT8ggRw/IMG-20250828-WA0052.jpg" alt="" /></div>
+        <div class="item"><img src="https://i.postimg.cc/9F0h1dsC/IMG-9223.avif" alt="" /></div>
       </div>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 E-Cell IGDTUW. All rights reserved.</p>
   </footer>
 
+  <!-- JS -->
   <script src="script.js"></script>
 </body>
-
 </html>
