--- a/events.html
+++ b/events.html
@@ -307,7 +307,7 @@
       box-shadow: 0 8px 20px rgba(168, 85, 247, 0.6);
     }
 
-    <!--added for making -->
+    /* <!--added for making --> */
   </style>
 </head>
 
@@ -325,10 +325,10 @@
       <div class="links">
         <a href="index.html" class="nav-text">About</a>
         <a href="events.html" class="nav-text">Events</a>
-        <a href="our-team.html" class="nav-text">Team</a>
         <a href="blogs.html" class="nav-text">Blogs</a>
         <a href="gallery.html" class="nav-text">Gallery</a>
         <a href="updates.html" class="nav-text">Updates</a>
+        <a href="our-team.html" class="nav-text">Team</a>
         <a class="cta" href="contact.html">Contact Us</a>
       </div>
 
@@ -346,10 +346,10 @@
     <span class="close" id="closeDrawer">&times;</span>
     <a href="index.html">About</a>
     <a href="events.html">Events</a>
-    <a href="our-team.html">Team</a>
     <a href="blogs.html">Blogs</a>
     <a href="gallery.html">Gallery</a>
     <a href="updates.html">Updates</a>
+    <a href="our-team.html">Team</a>
     <a href="contact.html">Contact Us</a>
   </div>
 
